Update settings to real ones

--- a/scan_exporter/settings.json
+++ b/scan_exporter/settings.json
@@ -1,14 +1,15 @@
 {
-  "detector_name": "JF07T32V01",
-  "jf_pedestal": "/sf/bernina/exp/example_data/Ge_tt/pedestal_20190304_0545.JF07T32V01.res.h5",
-  "jf_gain": "/sf/jungfrau/config/gainMaps/JF07T32V01/gains.h5",
+  "detector_name": "JF07T32V02",
+  "jf_pedestal": "/sf/jungfrau/data/pedestal/JF07T32V02/20250701_141020.h5",
+  "jf_gain": "/sf/jungfrau/config/gainMaps/JF07T32V02/gains.h5",
   "jf_shape": [4432, 4215],
-  "source_dir": "/sf/bernina/exp/25g_chapman/work/test/raw/",
-  "export_dir": "/sf/bernina/exp/25g_chapman/work/test/work/",
+  "source_dir": "/sf/bernina/exp/25g_chapman/raw/",
+  "export_dir": "/sf/bernina/exp/25g_chapman/work/test_export/",
   "st_data_tag": "/entry/data/data",
   "st_sim_pos_tag": "/entry/positions/sim_positions",
   "st_log_pos_tag": "/entry/positions/log_positions",
-  "roi_1": [2500, 2800],
-  "roi_2": [200, 500],
-  "num_avg": 500
+  "roi_2": [2500, 2800],
+  "roi_1": [4000, 4200],
+  "num_avg": 100,
+  "raw": 1
 }
